--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,8 +1,18 @@
 :root {
-	/* --himiko-header: 4rem;
+    /* --himiko-header: 4rem;
     --himiko-footer: 2rem;
     --himiko-main: calc(100vh - (var(--himiko-header) + var(--himiko-footer)));
     --background-container-color: rgba(90, 32, 18, 0.9); */
+}
+
+/* FONT FAMILY FOR ALL TEXT */
+
+* {
+    font-family: 'Source Sans 3', 'Times New Roman', Times, serif;
+}
+
+body {
+    background-color: #aaa;
 }
 
 /*  
@@ -11,53 +21,121 @@
 ====================================== 
 */
 
-/* MAIN HEADER STYLES */
-
 header {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	padding: 12px 24px; /* Make this {padding: 8px 12px;} at 320px up to a specific screen size */
-	background-color: black;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+    padding: 12px;
+    background-color: black;
 
-	& > img {
-		width: min(40vw, 222px);
-	}
+    & > img {
+        width: min(42vw, 222px);
+    }
 
-	& nav {
-		margin-left: auto;
-		padding: 0 32px;
-	}
+    & .desktop-nav {
+        margin-left: auto;
+        padding: 0 32px;
+    }
 }
 
-/* STYLES FOR HEADER UL AND A TAGS */
+.desktop-nav {
+    display: none;
+}
 
-header ul {
-	display: flex;
-	gap: 1rem;
-	list-style-type: none;
+@media screen and (min-width: 48em) {
+    .desktop-nav {
+        display: block;
+    }
+}
 
-	& a {
-		color: white;
-		text-decoration: none;
-		text-transform: uppercase;
-	}
+@media screen and (min-width: 48em) {
+    header {
+        padding: 12px 16px;
+    }
+}
+
+/* STYLES FOR DESKTOP NAV UL AND A TAGS */
+
+.desktop-nav ul {
+    display: flex;
+    gap: 1rem;
+    list-style-type: none;
+
+    & a {
+        color: white;
+        text-decoration: none;
+        text-transform: uppercase;
+    }
+}
+
+/* STYLES FOR MOBILE NAV UL AND A TAGS */
+
+.hamburger-menu {
+    width: 1.5rem;
+}
+
+@media screen and (min-width: 48em) {
+    .hamburger-menu {
+        display: none;
+    }
+}
+
+.mobile-nav {
+    position: absolute;
+    top: 48px;
+    left: 0;
+    width: min(55vw, 250px);
+    height: 300px;
+    background-color: black;
+    border: 2px solid white;
+}
+
+@media screen and (min-width: 48em) {
+    .mobile-nav {
+        display: none;
+    }
+}
+
+.mobile-nav ul {
+    display: flex;
+    flex-direction: column;
+    list-style-type: none;
+    height: 100%;
+
+    & li {
+        height: 100%;
+    }
+
+    & li:not(:last-child) {
+        border-bottom: 2px solid white;
+    }
+
+    & a {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+        color: white;
+        text-decoration: none;
+        text-transform: uppercase;
+    }
 }
 
 /* ICON STYLES */
 
 .icons-container {
-	display: flex;
-	align-items: center;
-	gap: 0.5rem;
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
 
-	& img {
-		width: 1rem;
-		height: 1rem;
-	}
+    & img {
+        width: 1rem;
+        height: 1rem;
+    }
 
-	& img:last-child {
-		width: 1.5rem;
-		height: 1.5rem;
-	}
+    & img:last-child {
+        width: 1.5rem;
+        height: 1.5rem;
+    }
 }
