--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,6 +14,7 @@
 
 body {
     background-color: #aaa;
+    height: 2000px;
 }
 
 .wrapper {
@@ -38,18 +39,18 @@ header {
         width: min(42vw, 222px);
     }
 
-    & .desktop-nav {
+    & .desktop-nav-menu {
         margin-left: auto;
         padding: 0 32px;
     }
 }
 
-.desktop-nav {
+.desktop-nav-menu {
     display: none;
 }
 
 @media screen and (min-width: 48em) {
-    .desktop-nav {
+    .desktop-nav-menu {
         display: block;
     }
 }
@@ -68,7 +69,7 @@ header {
 
 /* STYLES FOR DESKTOP NAV */
 
-.desktop-nav ul {
+.desktop-nav-menu ul {
     display: flex;
     gap: 1rem;
     list-style-type: none;
@@ -78,6 +79,17 @@ header {
         text-decoration: none;
         text-transform: uppercase;
     }
+}
+
+/* STYLES FOR MOBILE NAV OVERLAY */
+
+.mobile-nav-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: rgba(104, 104, 104, 0.5);
+    width: 100%;
+    height: 100vh;
 }
 
 /* STYLES FOR MOBILE NAV */
@@ -92,7 +104,7 @@ header {
     }
 }
 
-.mobile-nav {
+.mobile-nav-menu {
     position: absolute;
     top: 48px;
     left: 0;
@@ -100,18 +112,19 @@ header {
     height: 300px;
     background-color: black;
     border: 2px solid white;
+    z-index: 100;
     /* transform: translateX(-100%); */
 }
 
 @media screen and (min-width: 48em) {
-    .mobile-nav {
+    .mobile-nav-menu {
         display: none;
     }
 }
 
 /* STYLES FOR MOBILE NAV ul, li AND a TAGS */
 
-.mobile-nav ul {
+.mobile-nav-menu ul {
     display: flex;
     flex-direction: column;
     list-style-type: none;
