--- a/styles/styles.css
+++ b/styles/styles.css
@@ -89,7 +89,7 @@ header {
     left: 0;
     background-color: rgba(104, 104, 104, 0.5);
     width: 100%;
-    height: 100vh;
+    /* height: 100vh; */
 }
 
 /* STYLES FOR MOBILE NAV */
@@ -107,13 +107,17 @@ header {
 .mobile-nav-menu {
     position: absolute;
     top: 48px;
-    left: 0;
+    left: calc(-176px - var(--mobile-nav-width));
     width: var(--mobile-nav-width);
     height: 300px;
     background-color: black;
     border: 2px solid white;
     z-index: 100;
-    /* transform: translateX(-100%); */
+    transition: left 0.3s ease-in-out;
+}
+
+.mobile-nav-menu--open {
+    left: 0;
 }
 
 @media screen and (min-width: 48em) {
