--- a/styles/styles.css
+++ b/styles/styles.css
@@ -84,12 +84,13 @@ header {
 /* STYLES FOR MOBILE NAV OVERLAY */
 
 .mobile-nav-overlay {
+    display: none;
     position: absolute;
     top: 0;
     left: 0;
     background-color: rgba(104, 104, 104, 0.5);
     width: 100%;
-    /* height: 100vh; */
+    height: 100vh;
 }
 
 /* STYLES FOR MOBILE NAV */
