--- a/styles/styles.css
+++ b/styles/styles.css
@@ -92,16 +92,22 @@ header {
 	position: absolute;
 	top: 0;
 	left: 0;
-	background-color: rgba(104, 104, 104, 0.5);
+	background-color: rgba(104, 104, 104, 0.8);
 	width: 100%;
 	height: 100vh;
 }
 
 /* STYLES FOR MOBILE NAV */
 
-.hamburger-menu,
-.close-x-icon {
+.hamburger-menu {
 	width: 1.5rem;
+}
+
+.close-x-icon {
+	position: absolute;
+	right: 24px;
+	top: 24px;
+	width: 2rem;
 }
 
 @media screen and (min-width: 48em) {
@@ -112,10 +118,10 @@ header {
 
 .mobile-nav-menu {
 	position: absolute;
-	top: 48px;
+	top: 0;
 	left: calc(-176px - var(--mobile-nav-width));
 	width: var(--mobile-nav-width);
-	height: 300px;
+	height: 100vh;
 	background-color: black;
 	border: 2px solid white;
 	z-index: 100;
@@ -138,13 +144,10 @@ header {
 	display: flex;
 	flex-direction: column;
 	list-style-type: none;
-	height: 100%;
+	height: 300px;
 
 	& li {
 		height: 100%;
-	}
-
-	& li:not(:last-child) {
 		border-bottom: 2px solid white;
 	}
 
