Update overflow hidden on body to only apply below certain screen widths
Add display block as a class to apply to the mobile nav overlay in place of applying it directly with Javascript

Add hamburger menu and mobile nav overlay to the display none rule so they don't appear on desktop or most tablets if users resize their screen

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -17,8 +17,10 @@ body {
     height: 2000px;
 }
 
-.overflow-body--hidden {
-    overflow: hidden;
+@media screen and (max-width: 48em) {
+    .overflow-body--hidden {
+        overflow: hidden;
+    }
 }
 
 .wrapper {
@@ -103,6 +105,10 @@ header {
     height: 100vh;
 }
 
+.mobile-nav-overlay--display-block {
+    display: block;
+}
+
 .close-x-icon {
     position: absolute;
     right: 24px;
@@ -139,6 +145,8 @@ header {
 }
 
 @media screen and (min-width: 48em) {
+    .hamburger-menu,
+    .mobile-nav-overlay,
     .mobile-nav-menu {
         display: none;
     }
