--- a/styles/styles.css
+++ b/styles/styles.css
@@ -17,7 +17,7 @@ body {
     height: 2000px;
 }
 
-@media screen and (max-width: 47.938em) {
+@media screen and (max-width: 52.063em) {
     .overflow-body--hidden {
         overflow: hidden;
     }
@@ -55,15 +55,15 @@ header {
     display: none;
 }
 
-@media screen and (min-width: 48em) {
+@media screen and (min-width: 52.125em) {
     .desktop-nav-menu {
         display: block;
     }
 }
 
-@media screen and (min-width: 48em) {
+@media screen and (min-width: 52.125em) {
     header {
-        padding: 12px 16px;
+        padding: 6px 16px 10px;
     }
 }
 
@@ -77,7 +77,7 @@ header {
 
 .desktop-nav-menu ul {
     display: flex;
-    gap: 1rem;
+    gap: 1.6rem;
     list-style-type: none;
 
     & a {
@@ -119,10 +119,10 @@ header {
 /* STYLES FOR MOBILE NAV */
 
 .hamburger-menu {
-    width: 1.5rem;
+    width: min(2.5rem, 9vw);
 }
 
-@media screen and (min-width: 48em) {
+@media screen and (min-width: 52.125em) {
     .hamburger-menu {
         display: none;
     }
@@ -144,7 +144,7 @@ header {
     left: 0;
 }
 
-@media screen and (min-width: 48em) {
+@media screen and (min-width: 52.125em) {
     .hamburger-menu,
     .mobile-nav-overlay,
     .mobile-nav-menu {
@@ -185,7 +185,7 @@ header {
 .icons-container {
     display: flex;
     align-items: center;
-    gap: 0.5rem;
+    gap: 0.6rem;
 
     & img {
         width: 1rem;
