Update hero image to be positioned absolutely to hero section to not be hidden behind header
Add fail safe of background size cover for screens with weird width to height ratios. Not a perfect fix

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -212,13 +212,24 @@ header {
 ======================================
 */
 
+.audioengine-hero {
+    position: relative;
+    height: 1080px;
+    width: 100%;
+}
+
 .audioengine-hero::before {
     content: '';
     background-image: url('/images/banner/banner-01-speaker-black.jpg');
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: contain;
     position: absolute;
     inset: 0;
-    /* width: 100%; */
     z-index: -1;
+}
+
+@media screen and (min-width: 127em) {
+    .audioengine-hero::before {
+        background-size: cover;
+    }
 }
