--- a/styles/styles.css
+++ b/styles/styles.css
@@ -37,7 +37,8 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    position: relative;
+    position: sticky;
+    top: 0;
     padding: 12px;
     background-color: black;
 
