Add comments for stating where section styles start
Add z-index -1 to hero section so when the mobile nav menu is open the javascript click listener functions correctly

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -210,6 +210,12 @@ header {
 
 /*  
 ======================================
+             MAIN SECTIONS         
+======================================
+*/
+
+/*  
+======================================
              HERO SECTION         
 ======================================
 */
@@ -218,6 +224,7 @@ header {
     position: relative;
     height: 1080px;
     width: 100%;
+    z-index: -1;
 }
 
 .audioengine-hero::before {
