--- a/styles/styles.css
+++ b/styles/styles.css
@@ -12,7 +12,7 @@ body {
     background-color: #aaa;
 }
 
-@media screen and (max-width: 50.063em) {
+@media screen and (max-width: 63.063em) {
     .overflow-body--hidden {
         overflow: hidden;
     }
@@ -47,9 +47,9 @@ header {
     }
 }
 
-@media screen and (min-width: 50.125em) {
+@media screen and (min-width: 63.125em) {
     header {
-        padding: 10px 16px;
+        padding: 14px;
     }
 }
 
@@ -64,10 +64,10 @@ header {
 .desktop-nav-menu {
     display: none;
     margin-left: auto;
-    padding: 0 32px;
+    padding: 0 48px;
 }
 
-@media screen and (min-width: 50.125em) {
+@media screen and (min-width: 63.125em) {
     .desktop-nav-menu {
         display: block;
     }
@@ -75,13 +75,14 @@ header {
 
 .desktop-nav-menu ul {
     display: flex;
-    gap: 1.6rem;
+    gap: 2.8rem;
     list-style-type: none;
 
     & a {
         color: white;
         text-decoration: none;
         text-transform: uppercase;
+        font-size: 1.2rem;
     }
 }
 
@@ -120,7 +121,7 @@ header {
     width: min(2.5rem, 9vw);
 }
 
-@media screen and (min-width: 50.125em) {
+@media screen and (min-width: 63.125em) {
     .hamburger-menu {
         display: none;
     }
@@ -142,7 +143,7 @@ header {
     left: 0;
 }
 
-@media screen and (min-width: 50.125em) {
+@media screen and (min-width: 63.125em) {
     .hamburger-menu,
     .mobile-nav-overlay,
     .mobile-nav-menu {
@@ -194,16 +195,16 @@ header {
     }
 }
 
-@media screen and (min-width: 50.125em) {
+@media screen and (min-width: 63.125em) {
     .icons-container {
-        gap: 0.6rem;
+        gap: 0.8em;
 
         & img {
-            width: 0.8rem;
+            width: 1rem;
         }
 
         & img:last-child {
-            width: 1.1rem;
+            width: 1.3rem;
         }
     }
 }
