--- a/styles/styles.css
+++ b/styles/styles.css
@@ -266,18 +266,17 @@ header {
     position: absolute;
     right: 0;
     top: 2rem;
-    width: 37.5rem;
-    height: 19.3rem;
-    padding: 44px 0 32px;
-    padding-left: 1.85rem;
+    padding-top: 5px;
+    padding-left: 24px;
+    width: min(55vw, 37.5rem);
+    height: min(30vw, 19.3rem);
 
-    > * {
-        margin-bottom: 1.8rem;
+    > *:not(:first-child) {
+        margin-bottom: min(1.5vw, 1.7rem);
     }
 
     & h1 {
-        font-size: 3.7rem;
-        line-height: 0.5;
+        font-size: min(5vw, 3.7rem);
     }
 
     & h1,
@@ -292,7 +291,7 @@ header {
 
     & p {
         font-weight: 300;
-        font-size: 3.1rem;
+        font-size: min(4.2vw, 3.1rem);
         line-height: 1.05;
     }
 
@@ -301,8 +300,19 @@ header {
         color: #ffffffe6;
         background-color: var(--btn-1-color);
         border: none;
-        padding: 8px 23px;
         border-radius: 5px;
-        font-size: 1.1rem;
+        padding: 4px 10px;
+        font-size: min(1.5vw, 1.1rem);
+    }
+}
+
+@media screen and (min-width: 48em) {
+    .audioengine-hero-card {
+        padding-top: 16px;
+        padding-left: 32px;
+
+        & button {
+            padding: 8px 23px;
+        }
     }
 }
