--- a/styles/styles.css
+++ b/styles/styles.css
@@ -265,18 +265,19 @@ header {
 .audioengine-hero-card {
     position: absolute;
     right: 0;
-    top: 2rem;
-    padding-top: 5px;
-    padding-left: 24px;
-    width: min(55vw, 37.5rem);
-    height: min(30vw, 19.3rem);
+    top: min(2.7vw, 2rem);
+    padding-top: clamp(5px, 4vw, 16px);
+    padding-left: clamp(24px, 4vw, 32px);
+    width: min(65vw, 37.5rem);
+    height: min(38vw, 19.3rem);
+    height: clamp(5rem, 38vw, 19.3rem);
 
     > *:not(:first-child) {
-        margin-bottom: min(1.5vw, 1.7rem);
+        margin-bottom: min(2.3vw, 1.7rem);
     }
 
     & h1 {
-        font-size: min(5vw, 3.7rem);
+        font-size: min(6vw, 3.7rem);
     }
 
     & h1,
@@ -285,34 +286,23 @@ header {
     }
 
     & h1,
-    button {
+    a {
         text-transform: uppercase;
     }
 
     & p {
         font-weight: 300;
-        font-size: min(4.2vw, 3.1rem);
+        font-size: min(5.2vw, 3.1rem);
         line-height: 1.05;
     }
 
-    & button {
+    & a {
         align-self: flex-start;
         color: #ffffffe6;
         background-color: var(--btn-1-color);
         border: none;
         border-radius: 5px;
-        padding: 4px 10px;
-        font-size: min(1.5vw, 1.1rem);
-    }
-}
-
-@media screen and (min-width: 48em) {
-    .audioengine-hero-card {
-        padding-top: 16px;
-        padding-left: 32px;
-
-        & button {
-            padding: 8px 23px;
-        }
+        padding: min(1vw, 8px) min(2vw, 23px);
+        font-size: min(2.5vw, 1.1rem);
     }
 }
