--- a/styles/styles.css
+++ b/styles/styles.css
@@ -236,6 +236,18 @@ header {
 
 .audioengine-hero {
     position: relative;
+    padding-bottom: 52%;
+}
+
+.audioengine-hero::before {
+    content: '';
+    background-image: url('../images/banner/banner-01-speaker-black.jpg');
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    position: absolute;
+    inset: 0;
+    z-index: -1;
 }
 
 /* STYLES FOR AUDIO HERO IMAGE CARD */
@@ -282,7 +294,7 @@ header {
     & p {
         font-weight: 300;
         font-size: min(5.2vw, 3.1rem);
-        line-height: 1.05;
+        line-height: 0.94;
     }
 
     & a {
@@ -291,8 +303,69 @@ header {
         color: #ffffffe6;
         background-color: var(--btn-1-color);
         border: none;
-        border-radius: 5px;
+        border-radius: 4px;
         padding: min(1vw, 8px) min(2vw, 23px);
         font-size: min(2.5vw, 1.1rem);
+    }
+}
+
+/*  
+======================================
+        SHOP SPEAKERS SECTION         
+======================================
+*/
+
+/* STYLES FOR SHOP AND POPULAR SPEAKERS */
+
+.shop-speakers {
+    background-color: white;
+}
+
+.shop-speakers h2,
+.shop-speakers h3,
+.shop-speakers a {
+    text-transform: uppercase;
+}
+
+.popular-speakers h2 {
+    text-align: center;
+    font-size: 1.5rem;
+    font-weight: 300;
+    padding: 36px 0;
+}
+
+/* STYLES FOR CURRENT POPULAR SPEAKERS */
+
+.current-popular-speakers {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 3rem;
+    list-style-type: none;
+
+    & li {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    & li img {
+        width: 15rem;
+    }
+
+    & li h3 {
+        text-align: center;
+        font-weight: 300;
+        margin-bottom: 2.5rem;
+    }
+
+    & li a {
+        text-decoration: none;
+        color: #ffffffe6;
+        background-color: var(--btn-1-color);
+        border: none;
+        border-radius: 4px;
+        padding: 6px 18px;
+        font-size: 1.1rem;
     }
 }
