--- a/styles/styles.css
+++ b/styles/styles.css
@@ -264,21 +264,24 @@ header {
 }
 
 .audioengine-hero-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 0.5rem;
     position: absolute;
     right: 0;
     top: min(2.7vw, 2rem);
     padding-top: clamp(5px, 4vw, 16px);
     padding-left: clamp(24px, 4vw, 32px);
-    width: min(65vw, 37.5rem);
-    height: min(38vw, 19.3rem);
-    height: clamp(5rem, 38vw, 19.3rem);
+    width: min(72vw, 37.5rem);
+    height: min(42vw, 19.5rem);
 
     > *:not(:first-child) {
-        margin-bottom: min(2.3vw, 1.7rem);
+        margin-bottom: min(2.4vw, 1.7rem);
     }
 
     & h1 {
-        font-size: min(6vw, 3.7rem);
+        font-size: min(7vw, 3.7rem);
     }
 
     & h1,
@@ -293,8 +296,7 @@ header {
 
     & p {
         font-weight: 300;
-        font-size: min(5.2vw, 3.1rem);
-        line-height: 0.94;
+        font-size: min(6vw, 3.1rem);
     }
 
     & a {
@@ -304,7 +306,7 @@ header {
         background-color: var(--btn-1-color);
         border: none;
         border-radius: 4px;
-        padding: min(1vw, 8px) min(2vw, 23px);
+        padding: min(2vw, 12px) min(3vw, 20px);
         font-size: min(2.5vw, 1.1rem);
     }
 }
@@ -329,9 +331,9 @@ header {
 
 .popular-speakers h2 {
     text-align: center;
-    font-size: 1.5rem;
+    font-size: 2.5rem;
     font-weight: 300;
-    padding: 36px 0;
+    padding: 60px 0 80px;
 }
 
 /* STYLES FOR CURRENT POPULAR SPEAKERS */
@@ -340,7 +342,7 @@ header {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    gap: 3rem;
+    gap: 5.5rem;
     list-style-type: none;
 
     & li {
@@ -357,6 +359,9 @@ header {
         text-align: center;
         font-weight: 300;
         margin-bottom: 2.5rem;
+        font-size: 1.3rem;
+        text-wrap: auto;
+        width: 17rem;
     }
 
     & li a {
@@ -365,7 +370,62 @@ header {
         background-color: var(--btn-1-color);
         border: none;
         border-radius: 4px;
-        padding: 6px 18px;
-        font-size: 1.1rem;
+        padding: 14px 26px;
+        margin-top: auto;
+        font-size: 1.3rem;
+    }
+}
+
+/* STYLES FOR SHOP BY ROOM OR DEVICE */
+
+.shop-by-room-or-device h2,
+.shop-by-room-or-device h3 {
+    text-transform: uppercase;
+}
+
+.shop-by-room-or-device h2 {
+    text-align: center;
+    font-size: 2.4rem;
+    font-weight: 300;
+    padding: 36px 0;
+}
+
+.room-or-device {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 2.5rem;
+    list-style-type: none;
+}
+
+.bubble-shop-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+
+    & img,
+    h3 {
+        border-radius: 50%;
+    }
+
+    & img {
+        width: 10rem;
+    }
+
+    & h3 {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: absolute;
+        color: white;
+        font-size: 1.4rem;
+        font-weight: 400;
+        text-align: center;
+        text-wrap: auto;
+        z-index: 10;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(36, 36, 36, 0.6);
     }
 }
