--- a/styles/styles.css
+++ b/styles/styles.css
@@ -265,7 +265,7 @@ header {
     align-items: center;
     position: absolute;
     width: 56vw;
-    aspect-ratio: 1 / 1.2;
+    aspect-ratio: 1 / 1.3;
 
     > *:not(:first-child) {
         margin-bottom: min(2.4vw, 1.7rem);
@@ -299,8 +299,8 @@ header {
         text-decoration: none;
         color: #ffffffdc;
         background-color: var(--btn-1-color);
-        padding: min(2.5vw, 18px) min(3.5vw, 25px);
-        font-size: min(3.5vw, 1.1rem);
+        padding: max(2.4vw, 10px) max(2.8vw, 12px);
+        font-size: min(3.5vw, 1.3rem);
         border: none;
         border-radius: 4px;
     }
@@ -368,14 +368,20 @@ header {
 .popular-speakers h2,
 .shop-by-room-or-device h2 {
     text-align: center;
-    font-size: 2.5rem;
+    font-size: min(8vw, 2.5rem);
     font-weight: 300;
 }
 
 /* STYLES FOR CURRENT POPULAR SPEAKERS */
 
 .popular-speakers h2 {
-    padding: 60px 0 80px;
+    padding: 40px 0 50px;
+}
+
+@media screen and (min-width: 48em) {
+    .popular-speakers h2 {
+        padding: 60px 0 80px;
+    }
 }
 
 .current-popular-speakers {
@@ -410,9 +416,10 @@ header {
         background-color: var(--btn-1-color);
         border: none;
         border-radius: 4px;
-        padding: 14px 24px;
+        /* padding: 14px 24px; */
+        padding: max(2.4vw, 10px) max(2.8vw, 12px);
         margin-top: auto;
-        font-size: 1.3rem;
+        font-size: min(4.5vw, 1.3rem);
     }
 }
 
