--- a/styles/styles.css
+++ b/styles/styles.css
@@ -416,7 +416,6 @@ header {
         background-color: var(--btn-1-color);
         border: none;
         border-radius: 4px;
-        /* padding: 14px 24px; */
         padding: max(2.4vw, 10px) max(2.8vw, 12px);
         margin-top: auto;
         font-size: min(4.5vw, 1.3rem);
@@ -438,6 +437,7 @@ header {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    /* gap: clamp(1rem, 4vw, 2.5rem); */
     gap: 2.5rem;
     list-style-type: none;
 
@@ -459,7 +459,7 @@ header {
     }
 
     & img {
-        width: 9.7rem;
+        width: min(40vw, 9.7rem);
     }
 
     & h3 {
@@ -468,7 +468,7 @@ header {
         align-items: center;
         position: absolute;
         color: white;
-        font-size: 1.76rem;
+        font-size: min(7vw, 1.76rem);
         font-weight: 500;
         text-align: center;
         text-wrap: auto;
