--- a/styles/styles.css
+++ b/styles/styles.css
@@ -475,7 +475,7 @@ header {
         position: absolute;
         color: white;
         font-size: min(7vw, 1.76rem);
-        font-weight: 500;
+        font-weight: 400;
         text-align: center;
         text-wrap: auto;
         z-index: 10;
@@ -483,5 +483,11 @@ header {
         height: 100%;
         /* background-color: rgba(36, 35, 35, 0.6); */
         background-color: #1f1f1f8f;
+    }
+}
+
+@media screen and (min-width: 48em) {
+    .bubble-shop-container h3 {
+        font-weight: 500;
     }
 }
