--- a/styles/styles.css
+++ b/styles/styles.css
@@ -433,10 +433,9 @@ header {
     padding: 70px 0 36px;
 }
 
-@media screen and (max-width: 48em) {
-    .shop-by-room-or-device h2 {
-        width: 16rem;
-        margin: auto;
+@media screen and (min-width: 48em) {
+    .shop-by-room-or-device br {
+        display: none;
     }
 }
 
@@ -451,6 +450,7 @@ header {
     justify-content: center;
     flex-wrap: wrap;
     gap: 2.5rem;
+    gap: clamp(1.2rem, 4.5vw, 2.5rem);
     list-style-type: none;
 
     & li {
@@ -487,7 +487,6 @@ header {
         z-index: 10;
         width: 100%;
         height: 100%;
-        /* background-color: rgba(36, 35, 35, 0.6); */
         background-color: #1f1f1f8f;
     }
 }
