--- a/styles/styles.css
+++ b/styles/styles.css
@@ -357,6 +357,7 @@ header {
 
 .shop-speakers {
     background-color: white;
+    padding-bottom: 56px;
 }
 
 .shop-speakers h2,
@@ -416,9 +417,10 @@ header {
         background-color: var(--btn-1-color);
         border: none;
         border-radius: 4px;
-        padding: max(2.4vw, 10px) max(2.8vw, 12px);
+        /* padding: max(2.4vw, 10px) max(2.8vw, 12px); */
+        padding: clamp(10px, 2.4vw, 14.5px) clamp(12px, 2.8vw, 22px);
         margin-top: auto;
-        font-size: min(4.5vw, 1.3rem);
+        font-size: min(4.5vw, 1.2rem);
     }
 }
 
@@ -487,11 +489,5 @@ header {
         width: 100%;
         height: 100%;
         background-color: #1f1f1f8f;
-    }
-}
-
-@media screen and (min-width: 48em) {
-    .bubble-shop-container h3 {
-        font-weight: 500;
     }
 }
