--- a/styles/styles.css
+++ b/styles/styles.css
@@ -272,7 +272,7 @@ header {
     }
 
     & h1 {
-        font-size: min(8.5vw, 3.7rem);
+        font-size: min(6.9vw, 3.7rem);
     }
 
     & h1,
@@ -287,8 +287,7 @@ header {
 
     & p {
         font-weight: 300;
-        font-size: min(7.5vw, 3.1rem);
-        text-wrap: wrap;
+        font-size: min(5.8vw, 3.1rem);
     }
 
     br {
@@ -489,5 +488,128 @@ header {
         width: 100%;
         height: 100%;
         background-color: #1f1f1f8f;
+    }
+}
+
+/*  
+======================================
+             HERO SECTION         
+======================================
+*/
+
+/* STYLES AUDIO ENGINE HERO IMAGE */
+
+.all-new-section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    padding-bottom: 56px;
+
+    & picture {
+        z-index: -10;
+    }
+}
+
+/* STYLES FOR AUDIO ENGINE HERO IMAGE CARD */
+
+.all-new-section-card::before {
+    content: '';
+    background-color: #000000d8;
+    background-repeat: no-repeat;
+    background-size: contain;
+    opacity: 0.7;
+    position: absolute;
+    inset: 0;
+    z-index: -1;
+}
+
+.all-new-section-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    width: 56vw;
+    aspect-ratio: 1 / 1.3;
+
+    > *:not(:first-child) {
+        margin-bottom: min(2.4vw, 1.7rem);
+    }
+
+    & h2 {
+        font-size: min(8.5vw, 3.95rem);
+        font-weight: 400;
+    }
+
+    & h2,
+    p {
+        color: white;
+    }
+
+    & h2,
+    a {
+        text-transform: uppercase;
+    }
+
+    & p {
+        font-weight: 300;
+        font-size: min(7.5vw, 2.55rem);
+        text-wrap: wrap;
+    }
+
+    br {
+        display: none;
+    }
+
+    & a {
+        text-decoration: none;
+        color: #666666;
+        background-color: white;
+        padding: max(2.4vw, 10px) max(2.8vw, 12px);
+        font-size: min(3.5vw, 1.3rem);
+        border: none;
+        border-radius: 4px;
+    }
+}
+
+/* STYLES FOR MOBILE AUDIO ENGINE HERO CARD */
+
+@media screen and (max-width: 48em) {
+    .all-new-section-card::before {
+        border-radius: 5px;
+    }
+
+    .all-new-section-card {
+        justify-content: space-evenly;
+
+        & h1,
+        p {
+            text-align: center;
+        }
+    }
+}
+
+/* STYLES FOR DESKTOP AUDIO ENGINE HERO CARD */
+
+@media screen and (min-width: 48em) {
+    .all-new-section-card {
+        align-items: flex-start;
+        gap: 0.5rem;
+        right: 0;
+        top: 9.4rem;
+        padding-top: 22px;
+        padding-left: 42px;
+        width: 32.2rem;
+        height: 18rem;
+
+        & br {
+            display: block;
+        }
+
+        & a {
+            padding: 12px 22px;
+            font-size: 1.3rem;
+        }
     }
 }
