--- a/styles/styles.css
+++ b/styles/styles.css
@@ -515,7 +515,7 @@ header {
 
 .all-new-section-card::before {
     content: '';
-    background-color: #000000d8;
+    background-color: #000000b7;
     background-repeat: no-repeat;
     background-size: contain;
     opacity: 0.7;
@@ -531,14 +531,14 @@ header {
     align-items: center;
     position: absolute;
     width: 56vw;
-    aspect-ratio: 1 / 1.3;
+    aspect-ratio: 1 / 1.2;
 
     > *:not(:first-child) {
         margin-bottom: min(2.4vw, 1.7rem);
     }
 
     & h2 {
-        font-size: min(8.5vw, 3.95rem);
+        font-size: min(7.5vw, 3.9rem);
         font-weight: 400;
     }
 
@@ -554,7 +554,7 @@ header {
 
     & p {
         font-weight: 300;
-        font-size: min(7.5vw, 2.55rem);
+        font-size: min(4.8vw, 2.55rem);
         text-wrap: wrap;
     }
 
@@ -564,10 +564,10 @@ header {
 
     & a {
         text-decoration: none;
-        color: #666666;
+        color: var(--gray-font-color);
         background-color: white;
         padding: max(2.4vw, 10px) max(2.8vw, 12px);
-        font-size: min(3.5vw, 1.3rem);
+        font-size: min(3.5vw, 1.2rem);
         border: none;
         border-radius: 4px;
     }
@@ -597,9 +597,8 @@ header {
         align-items: flex-start;
         gap: 0.5rem;
         right: 0;
-        top: 9.4rem;
         padding-top: 22px;
-        padding-left: 42px;
+        padding-left: 44px;
         width: 32.2rem;
         height: 18rem;
 
@@ -608,8 +607,8 @@ header {
         }
 
         & a {
-            padding: 12px 22px;
-            font-size: 1.3rem;
+            padding: 13px 23px;
+            font-size: min(2vw, 1.3rem);
         }
     }
 }
