Update the display none for br to only target the one in the shop by room or device h2

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -435,7 +435,7 @@ header {
 }
 
 @media screen and (min-width: 48em) {
-    .shop-by-room-or-device br {
+    .shop-by-room-or-device h2 br {
         display: none;
     }
 }
