--- a/styles/styles.css
+++ b/styles/styles.css
@@ -620,10 +620,11 @@ header {
 .speaker-comparison {
     background-color: white;
     height: 500px;
-    padding-top: 68px;
+    padding-top: 71px;
 
     & h2 {
+        color: #3b3b3b;
         text-align: center;
-        font-size: 2.1rem;
+        font-size: 2.2rem;
     }
 }
