Add rounded corners for table head

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -640,11 +640,21 @@ header {
     border: 1px solid #d5d5d5;
 }
 
-.speaker-comparison thead th {
-    color: white;
-    background-color: #ff6600;
-    text-align: center;
-    text-transform: uppercase;
+.speaker-comparison thead {
+    & th {
+        color: white;
+        background-color: #ff6600;
+        text-align: center;
+        text-transform: uppercase;
+    }
+
+    & th:first-child {
+        border-top-left-radius: 5px;
+    }
+
+    & th:last-child {
+        border-top-right-radius: 5px;
+    }
 }
 
 .speaker-comparison tbody {
@@ -662,5 +672,13 @@ header {
 
     & td:nth-child(3) {
         font-weight: bold;
+    }
+
+    & td:first-child {
+        border-bottom-left-radius: 5px;
+    }
+
+    & td:last-child {
+        border-bottom-right-radius: 5px;
     }
 }
