--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,6 +2,7 @@
     --mobile-nav-width: min(55vw, 250px);
     --btn-1-color: #fc851e;
     --gray-font-color: #666666;
+    --table-border-radius: 20px;
 }
 
 /* FONT FAMILY FOR ALL TEXT */
@@ -646,14 +647,17 @@ header {
         background-color: #ff6600;
         text-align: center;
         text-transform: uppercase;
+        border-top: none;
     }
 
     & th:first-child {
-        border-top-left-radius: 5px;
+        border-top-left-radius: var(--table-border-radius);
+        border-left: none;
     }
 
     & th:last-child {
-        border-top-right-radius: 5px;
+        border-top-right-radius: var(--table-border-radius);
+        border-right: none;
     }
 }
 
@@ -672,13 +676,5 @@ header {
 
     & td:nth-child(3) {
         font-weight: bold;
-    }
-
-    & td:first-child {
-        border-bottom-left-radius: 5px;
-    }
-
-    & td:last-child {
-        border-bottom-right-radius: 5px;
     }
 }
