Update styles on table to more closely reflect provided image

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -645,7 +645,11 @@ header {
 .speaker-comparison th,
 .speaker-comparison td {
     padding: 19.3px 0;
-    border: 0.5px solid #d5d5d5;
+    border: 2px solid #d5d5d5;
+}
+
+.speaker-comparison th {
+    border-width: 1px;
 }
 
 .speaker-comparison thead {
