Update all new learn more button to be slightly more accurate

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -598,15 +598,16 @@ header {
         padding-top: 22px;
         padding-left: 44px;
         width: 32.2rem;
-        height: 18rem;
+        height: 17.8rem;
 
         & br {
             display: block;
         }
 
         & a {
-            padding: 13px 23px;
-            font-size: min(2vw, 1.3rem);
+            padding: 14.5px 24.5px;
+            font-size: min(2vw, 1.2rem);
+            font-weight: 500;
         }
     }
 }
