Add styles for 'our story' section card text overlay

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -493,7 +493,7 @@ header {
 
 /*  
 ======================================
-             ALL NEW SECTION         
+            ALL NEW SECTION         
 ======================================
 */
 
@@ -557,10 +557,6 @@ header {
         text-wrap: wrap;
     }
 
-    br {
-        display: none;
-    }
-
     & a {
         text-decoration: none;
         color: var(--gray-font-color);
@@ -614,7 +610,7 @@ header {
 
 /*  
 ======================================
-             ALL NEW SECTION         
+      SPEAKER COMPARISON SECTION         
 ======================================
 */
 
@@ -695,4 +691,133 @@ header {
     & tr:last-child td:last-child {
         border-bottom-right-radius: var(--table-border-radius);
     }
+}
+
+/*  
+======================================
+           OUR STORY SECTION         
+======================================
+*/
+
+/* STYLES FOR ALL NEW HERO IMAGE */
+
+.our-story {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    & picture {
+        z-index: -10;
+    }
+}
+
+/* STYLES FOR ALL NEW HERO IMAGE CARD */
+
+.our-story-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    position: absolute;
+    gap: 0.8rem;
+    width: 84vw;
+    aspect-ratio: 2 / 1;
+
+    & br:last-child {
+        display: none;
+    }
+
+    & h2 {
+        font-size: min(8vw, 3.9rem);
+        font-weight: 500;
+    }
+
+    & h2,
+    p {
+        color: white;
+    }
+
+    & h2,
+    a {
+        text-transform: uppercase;
+    }
+
+    & p {
+        font-size: min(4vw, 1.55rem);
+        font-weight: 500;
+        text-align: center;
+        line-height: 1.4;
+    }
+
+    & a {
+        text-decoration: none;
+        color: white;
+        background-color: var(--btn-1-color);
+        padding: max(2.4vw, 8px) max(2.8vw, 10px);
+        font-size: min(3.2vw, 1.2rem);
+        border: none;
+        border-radius: 4px;
+    }
+}
+
+/* STYLES FOR MOBILE ALL NEW HERO CARD */
+
+@media screen and (max-width: 48em) {
+    .our-story-card::before {
+        border-radius: 5px;
+    }
+
+    .our-story-card {
+        & h1,
+        p {
+            text-align: center;
+        }
+    }
+}
+
+/* STYLES FOR DESKTOP ALL NEW HERO CARD */
+
+@media screen and (min-width: 48em) {
+    .our-story-card {
+        justify-content: center;
+        gap: 0.5rem;
+        padding: 22px 36px 0 44px;
+        width: 42.5rem;
+        height: 17.8rem;
+
+        & br:last-child {
+            display: block;
+        }
+
+        & h2 {
+            font-size: min(6vw, 3.9rem);
+            margin: -16px 0 12px;
+        }
+
+        p {
+            font-size: min(2.5vw, 1.55rem);
+        }
+
+        & p,
+        a {
+            margin: 0 0 1.1rem;
+        }
+
+        & a {
+            padding: 14.5px 24.5px;
+            font-size: min(1.8vw, 1.2rem);
+            font-weight: 500;
+        }
+    }
+}
+
+/*  
+======================================
+           OUR STORY SECTION         
+======================================
+*/
+
+.in-the-news {
+    background-color: white;
+    padding-top: 400px;
 }
